tests/js/valid/strings/type-declaration.buri
hello: Str = "hello"
World = Str
world: World = "world"