tests/js/invalid/if/string-conditional.buri
result = if "hello" do "hello"